VQ-813 | Ability to Capture Insurance history

--- a/src/app/features/lms/ind/components/policy/underwriting/underwriting.component.html
+++ b/src/app/features/lms/ind/components/policy/underwriting/underwriting.component.html
@@ -4,7 +4,7 @@
       class="d-flex justify-content-start text-black"
       style="font-weight: 500; font-size: 16px"
     >
-      Policy Underwriting
+      Underwriting
     </div>
     <div class="row pt-4 px-4 pb-4 fadeIn" style="font-size: 12px">
       <div class="col-lg-4 col-md-6 col-sm-12 px-4">
