--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
@@ -68,26 +68,39 @@
   display:none;
 }
 
-
-.bound-box{
-  border: dotted;
-  background-image: url('https://placeimg.com/200/200/animals');
-  border-color: red;
-  height: 200px;
-  width: 200px;
-  max-height: 200px;
-  max-width: 200px;
-}
-
-.resizable-widget{
-  background-color: blue;
-  opacity: 0.5;
-  border: none;
-}
 .ng-draggable {
   cursor: grab;
 }
 
 .ng-dragging {
   cursor: grabbing;
+}
+
+
+.example-list {
+  /*width: 1000px;*/
+  max-width: 100%;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  display: flex;
+  flex-direction: row;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.example-box {
+  padding: 20px 10px;
+  border-right: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+  flex-grow: 1;
+  flex-basis: 0;
 }
